# okiru

./: Cargo.toml  README.md  test_cases.json
src/: lib.rs  main.rs  monitor.rs  ollama.rs  storage.rs
tests/: ollama_integration.rs
