[package]
name = "okiru"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
objc2 = "0.6.2"
objc2-app-kit = "0.3.1"
objc2-core-foundation = "0.3.1"
objc2-foundation = "0.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
reqwest = {version = "0.11", features = ["json"]}
